--- a/user/angular.json
+++ b/user/angular.json
@@ -22,10 +22,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/bootstrap.min.css" 
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -89,7 +91,9 @@
               "src/assets"
             ],
             "styles": [
+              
               "src/styles.css"
+              
             ],
             "scripts": []
           }
